<resources>
    <!--Error Messages -->
    <string name= "err_msg_event_name">Enter event name</string>
    <string name= "err_msg_location">Enter location for the event</string>
    <string name= "err_msg_date">Select date for the event</string>
    <string name= "err_msg_rsvp_date">Select respond by date</string>


    <string name="app_name">Let Meet Happen</string>
    <string name="login_label">LOGIN</string>

    <string name="select_group">Select Group</string>
    <string name="dates">Dates</string>
    <string name="rsvp_date">Respond by :</string>
    <string name="rsvp_date_hint">Respond by*</string>
    <string name="min_attendee">Min Attendees:</string>
    <string name="message">Message</string>

    <!-- new event fragment -->
    <string name="event_name_hint">Event name*</string>
    <string name="when">When*</string>

    <string name="settings">Settings</string>
    <string name="groups">Groups</string>
    <string name="group1">Close friends</string>
    <string name="group2">IUB Friends</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="addNewGroup">Add Group</string>
    <string name="group_name">Group Name</string>
    <string name="members">Members</string>
    <string name="create_invite">New Event</string>
    <string name="current_response">Your current response</string>
    <string name="ask">Can you join ? </string>
    <string name="positive">Yes, looking forward to it</string>
    <string name="negative">Sorry, I can\'t make it at this time.</string>
    <string name="maybe">Let me get back to you on this.</string>
    <string name="availableDates">Select All Available Dates</string>
    <string name="send">Send</string>
    <string name="locationLabel">Location :</string>
    <string name="locationHint">Where*</string>
    <string name="nYes">Going so far</string>
    <string name="attendees">Attendees</string>
    <string name="for_all">Click to select ...</string>
    <string name="let_meet_happen">Let Meet Happen</string>
    <string name="title_activity_groups_list">GroupsListActivity</string>


    <!--All button texts should be ALL CAPS-->
    <string name="save_button_text">SAVE</string>
    <string name="send_invite">INVITE</string>
    <string name="yes_button_text">YES</string>
    <string name="no_button_text">NO</string>
    <string name="create_group">CREATE</string>
    <string name="select_done">DONE</string>
    <string name="rsvp">RESPOND</string>
    <string name="next">Next...</string>
    <string name="availability">Select Date</string>

</resources>
