<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_margin="10dp">

    <TextView
        android:id="@+id/tvEventName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/etLocationValue"
        android:layout_toStartOf="@+id/etEventName" />

    <EditText
        android:id="@+id/etEventName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/event_name"
        android:inputType="textPersonName"
        android:layout_alignStart="@+id/etLocationValue" />

    <TextView
        android:id="@+id/tvLocationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/etLocationValue"
        android:layout_alignStart="@+id/tvEventName"
        android:text="@string/locationLabel"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textStyle="bold"
        android:layout_toStartOf="@+id/etLocationValue"
        android:layout_alignTop="@+id/etLocationValue" />

    <EditText
        android:id="@+id/etLocationValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/locationHint"
        android:enabled="true"
        android:clickable="true"
        android:inputType="text"
        android:maxLines="2"
        android:textSize="16sp"
        android:layout_below="@+id/etEventName"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="11dp" />


    <TextView
        android:id="@+id/tvDates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dates"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_alignEnd="@+id/etLocationValue"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/etLocationValue"
        android:layout_alignBottom="@+id/etDates" />

    <EditText
        android:id="@+id/etDates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/when"
        android:inputType="textMultiLine"
        android:maxLines="2"
        android:textSize="16sp"
        android:layout_below="@+id/etLocationValue"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/tvRSVPDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rsvp_date"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_alignTop="@+id/etRSVPDate"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/etRSVPDate"
        android:layout_alignBottom="@+id/etRSVPDate" />

    <EditText
        android:id="@+id/etRSVPDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/rsvp_date_hint"
        android:inputType="textPersonName"
        android:layout_below="@+id/tvDates"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/tvDates"
        android:layout_alignStart="@+id/etDates" />

    <TextView
        android:id="@+id/tvYesCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/min_attendee"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_below="@+id/tvRSVPDate" />

    <Spinner
        android:id="@+id/spMinYes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvRSVPDate"
        android:layout_toEndOf="@+id/etMessage" />


    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="34dp"
        android:textStyle="bold"
        android:text="@string/message"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_below="@+id/tvYesCount"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/etMessage"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:padding="5dp"
        android:layout_gravity="center"
        android:background="@drawable/rectangle"
        android:ems="10"
        android:inputType="textMultiLine"
        android:maxLines="4"
        android:textSize="14sp"
        android:layout_below="@+id/tvMessage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp" />

    <Button
        android:id="@+id/btn_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_invite"
        style="@style/NiceButton"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="35dp" />

</RelativeLayout>
