<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_marginTop="8dp"
    android:layout_marginLeft="5dp"
    android:padding="3dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_name" />

        <TextView
            android:id="@+id/tvEventName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/event_name"
            android:inputType="textPersonName"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/dates" />

        <TextView
            android:id="@+id/tvDates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:ems="10"
            android:hint="@string/when"
            android:inputType="textMultiLine"
            android:maxLines="2"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/rsvp_date" />

        <TextView
            android:id="@+id/tvRSVPDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvMinYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/min_attendee" />

        <TextView
            android:id="@+id/tvMinYesVal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="71dp"
            android:layout_alignParentTop="true"
            android:text="2"
            android:layout_toEndOf="@+id/tvMinYes" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvCurrentResponse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_response" />

        <TextView
            android:id="@+id/tvResponse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="71dp"
            android:layout_alignParentTop="true"
            android:text="Not yet responded"
            android:layout_toEndOf="@+id/tvCurrentResponse" />

    </RelativeLayout>

    <Button
        android:id="@+id/btnRespond"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginTop="90dp"
        android:text="@string/rsvp" />



</LinearLayout>