<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardElevation="8dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="449dp">

        <!-- The ActionBar displayed at the top -->
        <include
            android:id="@+id/include"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true" />

        <ImageView
            android:id="@+id/ivHostIcon"
            android:layout_width="@dimen/profileSize"
            android:layout_height="@dimen/profileSize"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/include"
            android:layout_marginTop="22dp"
            android:padding="@dimen/profileImagePadding"
            android:src="@drawable/ic_host_icon" />

        <TextView
            android:id="@+id/tvHostName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/ivHostIcon"
            android:layout_marginLeft="30dp"
            android:layout_toEndOf="@+id/ivHostIcon"
            android:text="host name"
            android:textSize="@dimen/titleTextSize"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ivEventDateIcon"
            android:layout_width="@dimen/profileSize"
            android:layout_height="@dimen/profileSize"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/ivHostIcon"
            android:layout_marginTop="20dp"
            android:padding="@dimen/profileImagePadding"
            android:src="@drawable/ic_event_dates"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


        <ImageView
            android:id="@+id/ivLocationIcon"
            android:layout_width="@dimen/profileSize"
            android:layout_height="@dimen/profileSize"
            android:layout_alignParentStart="true"
            android:layout_below="@id/ivEventDateIcon"
            android:layout_marginTop="20dp"
            android:padding="@dimen/profileImagePadding"
            android:src="@drawable/ic_location" />

        <TextView
            android:id="@+id/tvLocationValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/ivLocationIcon"
            android:layout_below="@+id/ivEventDateIcon"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/ivEventDateIcon"
            android:text="@string/locationHint"
            android:textSize="@dimen/titleTextSize"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tvDates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivHostIcon"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@+id/ivEventDateIcon"
            android:text="Dates"
            android:textSize="@dimen/titleTextSize"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDates2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvDates"
            android:layout_marginLeft="30dp"
            android:layout_toEndOf="@+id/ivEventDateIcon"
            android:paddingTop="2dp"
            android:visibility="invisible"
            android:text="Dates"
            android:textSize="@dimen/titleTextSize"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnRespond"
            style="@style/BorderlessButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rsvp"
            android:textSize="@dimen/buttonTextSize"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

        <EditText
            android:id="@+id/etAttendees"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:textSize="@dimen/titleTextSize"
            android:focusable="false"
            android:textStyle="bold"
            android:inputType="none"
            android:background="@null"
            android:layout_below="@+id/ivLocationIcon"
            android:layout_marginTop="20dp"
            android:lines="2"
            android:textColor="@color/secondary_text"
            android:maxLines="5"
            android:cursorVisible="false"
            android:scrollbars="vertical"
            android:layout_alignParentEnd="true"
            android:layout_alignStart="@+id/tvLocationValue" />

        <ImageView
            android:id="@+id/ivAttendee"
            android:layout_width="@dimen/profileSize"
            android:layout_height="@dimen/profileSize"
            android:padding="@dimen/profileImagePadding"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/etAttendees"
            app:srcCompat="@drawable/ic_people_icon" />

        <ImageView
            android:id="@+id/ivSandClockIcon"
            android:layout_width="@dimen/profileSize"
            android:layout_height="@dimen/profileSize"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/ivAttendee"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_sandclock_icon"
            android:text="@string/rsvp_date"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvRSVPDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:text="Thurs, Oct 13"
            android:textSize="@dimen/titleTextSize"
            android:textStyle="bold"
            android:layout_alignTop="@+id/ivSandClockIcon"
            android:layout_alignStart="@+id/etAttendees" />


    </RelativeLayout>




</android.support.v7.widget.CardView>